--- a/team_stage/storyCard5.html
+++ b/team_stage/storyCard5.html
@@ -40,8 +40,8 @@
 	</head>
 
 	<body>
-		<a href="index.html">❌</a>
 		<div class="cardMain">
+			<a href="index.html">X</a>
 			<div>
 				<!-- 사진첨부 -->
 				<img id="photo" class="cardImages" src="김형민사진.jpg" alt="이미지를 누르면 연결됩니다." />
