--- a/team_stage/storyCard1.html
+++ b/team_stage/storyCard1.html
@@ -40,8 +40,8 @@
 	</head>
 
 	<body>
+		<a href="index.html" id="back">X</a>
 		<div class="cardMain">
-			<a href="index.html">X</a>
 			<div>
 				<img id="photo" class="cardImages" src="박강토사진.png" alt="이미지를 누르면 연결됩니다." />
 			</div>
