--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -92,8 +92,8 @@
 	</head>
 
 	<body>
+		<a href="index.html" id="back">X</a>
 		<div class="cardMain">
-			<a href="index.html">X</a>
 			<div>
 				<img id="photo" class="cardImages" src="정해준사진.jpg" alt="이미지를 누르면 연결됩니다." />
 			</div>
