생성된 댓글 box 크기 조정

--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -76,8 +76,9 @@
 				let Password = $('#Password').val();
 				let comment = $('#comment').val();
 				let temp_html = `
+				
             <div class="col">
-                <div class="card border-info mb-3" style="max-width: 18rem">
+                <div class="card border-info mb-3">
                     <div class="card-body">
                         <h5 class="card-title">${title}</h5>
                         <p class="card-text">${comment}</p>
