--- a/team_stage/storyCard5.html
+++ b/team_stage/storyCard5.html
@@ -36,6 +36,24 @@
 			// Firebase 인스턴스 초기화
 			const app = initializeApp(firebaseConfig);
 			const db = getFirestore(app);
+			$('#makeComment').click(async function () {
+				let title = $('#title').val();
+				let Password = $('#Password').val();
+				let comment = $('#comment').val();
+				let temp_html = `
+				
+            <div class="col">
+                <div class="card border-info mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">${title}</h5>
+                        <p class="card-text">${comment}</p>
+                        <button type="button" class="btn btn-outline-warning">수정</button>
+                        <button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
+                    </div>
+                </div>
+            </div>`;
+				$('#card').append(temp_html);
+			});
 		</script>
 	</head>
 
