--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -63,11 +63,7 @@
 				await addDoc(collection(db, "comment"), doc);
             alert('저장 완료!');
             window.location.reload();
-<<<<<<< HEAD
-						
-=======
 		});
->>>>>>> 6875794382809183f479705df67b938827685c51
 				// 삭제기능 //
 				$(document).on('click', '#card .delete-btn', function () {
 					if ($(this).closest('.card-body').find('.password-input').length === 0) {
@@ -119,7 +115,14 @@
             </div>`;
 				$('#card').append(temp_html);
 			});
-		}
+
+			// Top 버튼 클릭시 페이지 상단으로 이동
+			$(document).ready(function() { 
+				$('#top-btn').click(function(){
+					$('html, body').animate({scrollTop : 0}, 200);
+					return false;
+				});
+			});
 		</script>
 	</head>
 
@@ -136,6 +139,8 @@
 				<a href="https://github.com/DecidedCard">GitHub</a>
 			</div>
 		</div>
+		
+		<button id="top-btn"> 	</button >
 
 		<form class="comment-wrap">
 			<div class="row">
