--- a/team_stage/storyCard4.html
+++ b/team_stage/storyCard4.html
@@ -55,10 +55,10 @@
 				$('#card').append(temp_html);
 			});
 
-				// Top 버튼 클릭시 페이지 상단으로 이동
-				$(document).ready(function() { 
-				$('#top-btn').click(function(){
-					$('html, body').animate({scrollTop : 0}, 200);
+			// Top 버튼 클릭시 페이지 상단으로 이동
+			$(document).ready(function () {
+				$('#top-btn').click(function () {
+					$('html, body').animate({ scrollTop: 0 }, 200);
 					return false;
 				});
 			});
@@ -70,7 +70,7 @@
 		<div class="cardMain">
 			<div>
 				<!-- 사진첨부 -->
-				<img id="photo" class="cardImages" src="..." alt="이미지를 누르면 연결됩니다." />
+				<img id="photo" class="cardImages" src="정보연사진.jpg" alt="이미지를 누르면 연결됩니다." />
 			</div>
 			<div class="cardStory">
 				<h1>정보연</h1>
@@ -80,7 +80,7 @@
 			</div>
 		</div>
 
-		<button id="top-btn"></button >
+		<button id="top-btn"></button>
 
 		<form class="comment-wrap">
 			<div class="row">
