hosting 관련 테스트

--- a/team_stage/storyCard1.html
+++ b/team_stage/storyCard1.html
@@ -95,8 +95,8 @@
 					<input id="comment" type="text" class="form-control" placeholder="comment" aria-label="Last name" />
 				</div>
 				<div class="col-auto">
-					<button type="submit" class="btn btn-primary mb-3">저장</button>
-					<button type="submit" class="btn btn-primary mb-3">취소</button>
+					<button type="submit" id="uplode" class="btn btn-primary mb-3">저장</button>
+					<button type="submit" id="cancel" class="btn btn-primary mb-3">취소</button>
 				</div>
 			</div>
 		</form>
