프로필사진 스크립트

--- a/team_stage/storyCard4.html
+++ b/team_stage/storyCard4.html
@@ -71,7 +71,7 @@
 		<div class="cardMain">
 			<div>
 				<!-- 사진첨부 -->
-				<img id="photo" class="cardImages" src="정보연사진.jpg" alt="이미지를 누르면 연결됩니다." />
+				<img id="photo" class="cardImages" src="https://firebasestorage.googleapis.com/v0/b/our-stage.appspot.com/o/%EC%A0%95%EB%B3%B4%EC%97%B0%EC%82%AC%EC%A7%84.jpg?alt=media&token=43416015-4c65-4eef-8f0e-1083a16ac4e0" alt="이미지를 누르면 연결됩니다." />
 			</div>
 			<div class="cardStory">
 				<h1>정보연</h1>
