--- a/team_stage/storyCard5.html
+++ b/team_stage/storyCard5.html
@@ -70,7 +70,7 @@
 		<div class="cardMain">
 			<div>
 				<!-- 사진첨부 -->
-				<img id="photo" class="cardImages" src="김형민사진.jpg" alt="이미지를 누르면 연결됩니다." />
+				<img id="photo" class="cardImages" src="https://firebasestorage.googleapis.com/v0/b/our-stage.appspot.com/o/%EA%B9%80%ED%98%95%EB%AF%BC%EC%82%AC%EC%A7%84.jpg?alt=media&token=fb75e045-485d-465b-bcbe-5ca1887f7117" alt="이미지를 누르면 연결됩니다." />
 			</div>
 			<div class="cardStory">
 				<h1>김형민</h1>
