--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -16,69 +16,92 @@
 	<link rel="stylesheet" href="sub.css" />
 	<!-- //css -->
 
-	<script type="module">
-		// Firebase SDK 라이브러리 가져오기
-		import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
-		import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
-		import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
-		import { getDocs } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+		<script type="module">
+			// Firebase SDK 라이브러리 가져오기
+			import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
+			import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+			import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+			import { getDocs } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
 
-		// Firebase 구성 정보 설정
-		const firebaseConfig = {
-			// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-			apiKey: 'AIzaSyDcQ6Q78akg6Oo9Z2VO5APf-QQ7S7kn9DQ',
-			authDomain: 'our-stage.firebaseapp.com',
-			projectId: 'our-stage',
-			storageBucket: 'our-stage.appspot.com',
-			messagingSenderId: '999213003989',
-			appId: '1:999213003989:web:774432a35de3c233c69e5c',
-			measurementId: 'G-G2QMB19RVB',
-		};
+			// Firebase 구성 정보 설정
+			const firebaseConfig = {
+				// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+				apiKey: 'AIzaSyDcQ6Q78akg6Oo9Z2VO5APf-QQ7S7kn9DQ',
+				authDomain: 'our-stage.firebaseapp.com',
+				projectId: 'our-stage',
+				storageBucket: 'our-stage.appspot.com',
+				messagingSenderId: '999213003989',
+				appId: '1:999213003989:web:774432a35de3c233c69e5c',
+				measurementId: 'G-G2QMB19RVB',
+			};
 
-		// Firebase 인스턴스 초기화
-		const app = initializeApp(firebaseConfig);
-		const db = getFirestore(app);
-		// const data = firestore.collection("profile")
-		// console.log(data)
+			// Firebase 인스턴스 초기화
+			const app = initializeApp(firebaseConfig);
+			const db = getFirestore(app);
+			// const data = firestore.collection("profile")
+			// console.log(data)
 
-		// 삭제기능 //
-		$(document).on('click', '#card .delete-btn', function () {
-			if ($(this).closest('.card-body').find('.password-input').length === 0) {
-				const passwordInput = $('<input>', {
-					type: 'password',
-					class: 'form-control password-input',
-					placeholder: 'Password',
-					style: 'margin-top: 10px; width: 200px; height: 30px;',
-				});
+			$('#makeComment').click(async function () {
+				let title = $('#name').val();
+				let Password = $('#Password').val();
+				let comment = $('#comment').val();
+		
+			
+				let temp_html = `
+				<div class="col">
+					<div class="card border-info mb-3" style="max-width: 18rem" data-password="${Password}">
+						<div class="card-body">
+							<h5 class="card-title">${title}</h5>
+							<p class="card-text">${comment}</p>
+							<button type="button" class="btn btn-outline-warning">수정</button>
+							<button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
+						</div>
+					</div>
+				</div>`;
+				$('#card').append(temp_html);
 
-				const deleteBtn = $(this);
-				const cardBody = deleteBtn.closest('.card-body');
-
-				cardBody.append(passwordInput);
-
-				passwordInput.on('blur', function () { });
-
-				passwordInput.on('keydown', function (e) {
-					if (e.key === 'Enter') {
-						const enteredPassword = $(this).val();
-						const storedPassword = 'your_actual_stored_password';
-
-						if (enteredPassword === storedPassword) {
-							deleteBtn.closest('.col').remove();
-						} else {
-							alert('비밀번호가 틀립니다.');
-						}
-					}
-				});
-				passwordInput.focus();
-			} else {
-			}
+				await addDoc(collection(db, "profile"), doc);
+            alert('저장 완료!');
+            window.location.reload();
 		});
-		$('#makeComment').click(async function () {
-			let title = $('#title').val();
-			let Password = $('#Password').val();
-			let comment = $('#comment').val();
-			let temp_html = `
+				// 삭제기능 //
+				$(document).on('click', '#card .delete-btn', function () {
+					if ($(this).closest('.card-body').find('.password-input').length === 0) {
+						const passwordInput = $('<input>', {
+							type: 'password',
+							class: 'form-control password-input',
+							placeholder: 'Password',
+							style: 'margin-top: 10px; width: 200px; height: 30px;',
+						});
+
+					const deleteBtn = $(this);
+					const cardBody = deleteBtn.closest('.card-body');
+
+					cardBody.append(passwordInput);
+
+					passwordInput.on('blur', function () {});
+
+					passwordInput.on('keydown', function (e) {
+						if (e.key === 'Enter') {
+							const enteredPassword = $(this).val();
+							const storedPassword = cardBody.closest('.card').data('password');
+
+							if (enteredPassword === storedPassword) {
+								deleteBtn.closest('.col').remove();
+							} else {
+								alert('비밀번호가 틀립니다.');
+							}
+						}
+					});
+					passwordInput.focus();
+				} else {
+				}
+			});
+			$('#makeComment').click(async function () {
+				let title = $('#title').val();
+				let Password = $('#Password').val();
+				let comment = $('#comment').val();
+				let temp_html = `
 				
             <div class="col">
                 <div class="card border-info mb-3">
@@ -91,37 +114,23 @@
                 </div>
             </div>`;
 				$('#card').append(temp_html);
-
-				await addDoc(collection(db, "comment"), doc);
-			alert('저장 완료!');
-			window.location.reload();
-		});
-
-			// Top 버튼 클릭시 페이지 상단으로 이동
-			$(document).ready(function() { 
-				$('#top-btn').click(function(){
-					$('html, body').animate({scrollTop : 0}, 200);
-					return false;
-				});
 			});
-	</script>
-</head>
+		</script>
+	</head>
 
-<body>
-	<a href="index.html" id="back">X</a>
-	<div class="cardMain">
-		<div>
-			<img id="photo" class="cardImages" src="정해준사진.jpg" alt="이미지를 누르면 연결됩니다." />
+	<body>
+		<a href="index.html" id="back">X</a>
+		<div class="cardMain">
+			<div>
+				<img id="photo" class="cardImages" src="https://firebasestorage.googleapis.com/v0/b/our-stage.appspot.com/o/%EC%A0%95%ED%95%B4%EC%A4%80%EC%82%AC%EC%A7%84.jpg?alt=media&token=ae8df09d-ac25-4f92-9d74-c30dd35775c3" alt="이미지를 누르면 연결됩니다." />
+			</div>
+			<div class="cardStory">
+				<h1>정해준</h1>
+				<p>경청을 잘 한다고 생각합니다.</p>
+				<a href="https://velog.io/@decidedcard">블로그</a>
+				<a href="https://github.com/DecidedCard">GitHub</a>
+			</div>
 		</div>
-		<div class="cardStory">
-			<h1>정해준</h1>
-			<p>경청을 잘 한다고 생각합니다.</p>
-			<a href="https://velog.io/@decidedcard">블로그</a>
-			<a href="https://github.com/DecidedCard">GitHub</a>
-		</div>
-	</div>
-
-		<button id="top-btn"></button >
 
 		<form class="comment-wrap">
 			<div class="row">
@@ -141,6 +150,24 @@
 				</div>
 			</div>
 		</form>
+	<form class="comment-wrap">
+		<div class="row">
+			<div class="col">
+				<input id="title" type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
+			</div>
+			<div class="col-auto">
+				<label for="inputPassword2" class="visually-hidden">Password</label>
+				<input type="password" class="form-control" id="Password" placeholder="Password" />
+			</div>
+			<div class="col">
+				<input id="comment" type="text" class="form-control" placeholder="comment" aria-label="Last name" />
+			</div>
+			<div class="col-auto">
+				<button id="makeComment" type="button" class="btn btn-primary mb-3">저장</button>
+				<button type="button" class="btn btn-primary mb-3">취소</button>
+			</div>
+		</div>
+	</form>
 
 	<div class="commentBox">
 		<div id="card" class="row row-cols-1 row-cols-md-4 g-4">
@@ -157,5 +184,4 @@
 		</div>
 	</div>
 </body>
-
 </html>
