--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -43,7 +43,7 @@
 
 			$('#makeComment').click(async function () {
 				let title = $('#name').val();
-				let Password = $('#Password').val().toString();
+				let Password = $('#Password').val();
 				let comment = $('#comment').val();
 		
 			
@@ -120,7 +120,7 @@
 				<a href="https://github.com/DecidedCard">GitHub</a>
 			</div>
 		</div>
-
+		
 		<form class="comment-wrap">
 			<div class="row">
 				<div class="col">
@@ -139,6 +139,7 @@
 				</div>
 			</div>
 		</form>
+	
 		
 		<button id="top-btn"></button >
 
