--- a/team_stage/storyCard2.html
+++ b/team_stage/storyCard2.html
@@ -39,26 +39,63 @@
 
 
 			$('#makeComment').click(async function () {
-				let title = $('#title').val();
+				let title = $('#name').val();
 				let Password = $('#Password').val();
 				let comment = $('#comment').val();
+		
+			
 				let temp_html = `
-				
-            <div class="col">
-                <div class="card border-info mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">${title}</h5>
-                        <p class="card-text">${comment}</p>
-                        <button type="button" class="btn btn-outline-warning">수정</button>
-                        <button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
-                    </div>
-                </div>
-            </div>`;
+				<div class="col">
+					<div class="card border-info mb-3" style="max-width: 100rem" data-password="${Password}">
+						<div class="card-body">
+							<h5 class="card-title">${title}</h5>
+							<p class="card-text">${comment}</p>
+							<button type="button" class="btn btn-outline-warning">수정</button>
+							<button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
+						</div>
+					</div>
+				</div>`;
 				$('#card').append(temp_html);
-			});
 
-				// Top 버튼 클릭시 페이지 상단으로 이동
-				$(document).ready(function() { 
+				// await addDoc(collection(db, "Profile"), doc);
+        //     alert('저장 완료!');
+        //     window.location.reload();
+		});
+
+				// 삭제기능 //
+				$(document).on('click', '#card .delete-btn', function () {
+    if ($(this).closest('.card-body').find('.password-input').length === 0) {
+        const passwordInput = $('<input>', {
+            type: 'password',
+            class: 'form-control password-input',
+            placeholder: 'Password',
+            style: 'margin-top: 10px; width: 200px; height: 30px;',
+        });
+
+        const deleteBtn = $(this);
+        const cardBody = deleteBtn.closest('.card-body');
+
+        cardBody.append(passwordInput);
+
+        passwordInput.on('blur', function () {});
+        passwordInput.on('keydown', function (e) {
+            if (e.key === 'Enter') {
+                const enteredPassword = $(this).val();
+				const storedPassword = cardBody.closest('.card').data('password');
+
+                if (enteredPassword === storedPassword) {
+                    deleteBtn.closest('.col').remove();
+                } else {
+                    alert('비밀번호가 틀립니다.');
+                }
+            }
+        });
+        passwordInput.focus();
+    } else {
+    }
+});
+	// Top 버튼 클릭시 페이지 상단으로 이동
+	$(document).ready(function() { 
 				$('#top-btn').click(function(){
 					$('html, body').animate({scrollTop : 0}, 200);
 					return false;
@@ -84,7 +121,7 @@
 		<form class="comment-wrap">
 			<div class="row">
 				<div class="col">
-					<input type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
+					<input id="name" type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
 				</div>
 				<div class="col-auto">
 					<label for="inputPassword2" class="visually-hidden">Password</label>
@@ -94,28 +131,15 @@
 					<input id="comment" type="text" class="form-control" placeholder="comment" aria-label="Last name" />
 				</div>
 				<div class="col-auto">
-					<button type="submit" class="btn btn-primary mb-3">저장</button>
-					<button type="submit" class="btn btn-primary mb-3">취소</button>
+					<button id="makeComment" type="button" class="btn btn-primary mb-3">저장</button>
+					<button type="button" class="btn btn-primary mb-3">취소</button>
 				</div>
 			</div>
 		</form>
-
 		<button id="top-btn"></button >
 
 		<div class="commentBox">
 			<div id="card" class="row row-cols-1 row-cols-md-4 g-4">
-				<div class="col">
-					<div class="card border-info mb-3">
-						<!-- 스타일 맥스 넓이값 지움 style="max-width: 18rem"-->
-						<div class="card-body">
-							<!-- ul -->
-							<h5 class="card-title">닉네임</h5>
-							<p class="card-text">comment</p>
-							<button type="button" class="btn btn-outline-warning">수정</button>
-							<button type="button" class="btn btn-outline-danger">삭제</button>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
 	</body>
