--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -65,8 +65,6 @@
         //     window.location.reload();
 		});
 
-		let checkpw = document.getElementsByTagName("span").value;
-
 				// 삭제기능 //
 				$(document).on('click', '#card .delete-btn', function () {
     if ($(this).closest('.card-body').find('.password-input').length === 0) {
@@ -126,7 +124,7 @@
 		<form class="comment-wrap">
 			<div class="row">
 				<div class="col">
-					<input id="title" type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
+					<input id="name" type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
 				</div>
 				<div class="col-auto">
 					<label for="inputPassword2" class="visually-hidden">Password</label>
@@ -147,16 +145,6 @@
 
 	<div class="commentBox">
 		<div id="card" class="row row-cols-1 row-cols-md-4 g-4">
-			<div class="col">
-				<div class="card border-info mb-3">
-					<div class="card-body">
-						<h5 class="card-title">닉네임</h5>
-						<p class="card-text">comment</p>
-						<button type="button" class="btn btn-outline-warning">수정</button>
-						<button type="button" class="btn btn-outline-danger">삭제</button>
-					</div>
-				</div>
-			</div>
 		</div>
 	</div>
 </body>
