--- a/team_stage/storyCard1.html
+++ b/team_stage/storyCard1.html
@@ -1,146 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>소개하기</title>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<!-- //jQuery -->
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>소개하기</title>
 
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-		<!-- //bootstrap -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<!-- //jQuery -->
 
-		<link rel="stylesheet" href="sub.css" />
-		<!-- //css -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+	<!-- //bootstrap -->
 
-		<script type="module">
-			// Firebase SDK 라이브러리 가져오기
-			import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
-			import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
-			import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
-			import { getDocs } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+	<link rel="stylesheet" href="sub.css" />
+	<!-- //css -->
 
-			// Firebase 구성 정보 설정
-			const firebaseConfig = {
-				// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-				apiKey: 'AIzaSyDcQ6Q78akg6Oo9Z2VO5APf-QQ7S7kn9DQ',
-				authDomain: 'our-stage.firebaseapp.com',
-				projectId: 'our-stage',
-				storageBucket: 'our-stage.appspot.com',
-				messagingSenderId: '999213003989',
-				appId: '1:999213003989:web:774432a35de3c233c69e5c',
-				measurementId: 'G-G2QMB19RVB',
-			};
+	<script type="module">
+		// Firebase SDK 라이브러리 가져오기
+		import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js';
+		import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
+		import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
+		import { getDocs } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
+	
 
-			// Firebase 인스턴스 초기화
-			const app = initializeApp(firebaseConfig);
-			const db = getFirestore(app);
+
+		// Firebase 구성 정보 설정
+		const firebaseConfig = {
+			// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+			apiKey: 'AIzaSyDcQ6Q78akg6Oo9Z2VO5APf-QQ7S7kn9DQ',
+			authDomain: 'our-stage.firebaseapp.com',
+			projectId: 'our-stage',
+			storageBucket: 'our-stage.appspot.com',
+			messagingSenderId: '999213003989',
+			appId: '1:999213003989:web:774432a35de3c233c69e5c',
+			measurementId: 'G-G2QMB19RVB',
+		};
+
+		// Firebase 인스턴스 초기화
+		const app = initializeApp(firebaseConfig);
+		const db = getFirestore(app);
+
+		import { doc, setDoc, Timestamp, updateDoc, arrayUnion } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
+
+		$('#makeComment').click(async function () {
+			let title = $('#name').val();
+			let Password = $('#Password').val();
+			let comment = $('#comment').val();
+
+
+			let tags = ['tag1', 'tag2', 'tag3']
+
+
+			const docRef = await addDoc(collection(db, "Profile"), {
+				title: title,
+				Password: Password,
+				comment: comment,
+				tags: tags
+			});
+			console.log("document written with ID: ", docRef.id)
 			
-			$('#makeComment').click(async function () {
-				let title = $('#name').val();
-				let Password = $('#Password').val();
-				let comment = $('#comment').val();
-		
-			
-				let temp_html = `
-				<div class="col">
-					<div class="card border-info mb-3" style="max-width: 100rem" data-password="${Password}">
-						<div class="card-body">
-							<h5 class="card-title">${title}</h5>
-							<p class="card-text">${comment}</p>
-							<button type="button" class="btn btn-outline-warning">수정</button>
-							<button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
-						</div>
-					</div>
-				</div>`;
-				$('#card').append(temp_html);
+			alert('저장 완료!');
+			window.location.reload();
 
-				// await addDoc(collection(db, "Profile"), doc);
-        //     alert('저장 완료!');
-        //     window.location.reload();
+
+
+
+
+			let temp_html = `
+						<div class="col">
+							<div class="card border-info mb-3" style="max-width: 100rem" data-password="${Password}">
+								<div class="card-body">
+									<h5 class="card-title">${title}</h5>
+									<p class="card-text">${comment}</p>
+									<button type="button" class="btn btn-outline-warning">수정</button>
+									<button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
+								</div>
+							</div>
+						</div>`;
+			$('#card').append(temp_html);
+
+
 		});
 
-				// 삭제기능 //
-				$(document).on('click', '#card .delete-btn', function () {
-    if ($(this).closest('.card-body').find('.password-input').length === 0) {
-        const passwordInput = $('<input>', {
-            type: 'password',
-            class: 'form-control password-input',
-            placeholder: 'Password',
-            style: 'margin-top: 10px; width: 200px; height: 30px;',
-        });
-
-        const deleteBtn = $(this);
-        const cardBody = deleteBtn.closest('.card-body');
-
-        cardBody.append(passwordInput);
-
-        passwordInput.on('blur', function () {});
-        passwordInput.on('keydown', function (e) {
-            if (e.key === 'Enter') {
-                const enteredPassword = $(this).val();
-				const storedPassword = cardBody.closest('.card').data('password');
-
-                if (enteredPassword === storedPassword) {
-                    deleteBtn.closest('.col').remove();
-                } else {
-                    alert('비밀번호가 틀립니다.');
-                }
-            }
-        });
-        passwordInput.focus();
-    } else {
-    }
-});
-	// Top 버튼 클릭시 페이지 상단으로 이동
-	$(document).ready(function() { 
-				$('#top-btn').click(function(){
-					$('html, body').animate({scrollTop : 0}, 200);
-					return false;
+		// 삭제기능 //
+		$(document).on('click', '#card .delete-btn', function () {
+			if ($(this).closest('.card-body').find('.password-input').length === 0) {
+				const passwordInput = $('<input>', {
+					type: 'password',
+					class: 'form-control password-input',
+					placeholder: 'Password',
+					style: 'margin-top: 10px; width: 200px; height: 30px;',
 				});
+
+				const deleteBtn = $(this);
+				const cardBody = deleteBtn.closest('.card-body');
+
+				cardBody.append(passwordInput);
+
+				passwordInput.on('blur', function () { });
+				passwordInput.on('keydown', function (e) {
+					if (e.key === 'Enter') {
+						const enteredPassword = $(this).val();
+						const storedPassword = cardBody.closest('.card').data('password');
+
+						if (enteredPassword === storedPassword) {
+							deleteBtn.closest('.col').remove();
+						} else {
+							alert('비밀번호가 틀립니다.');
+						}
+					}
+				});
+				passwordInput.focus();
+			} else {
+			}
+		});
+		// Top 버튼 클릭시 페이지 상단으로 이동
+		$(document).ready(function () {
+			$('#top-btn').click(function () {
+				$('html, body').animate({ scrollTop: 0 }, 200);
+				return false;
 			});
-		</script>
-	</head>
+		});
+	</script>
+</head>
 
-	<body>
-		<a href="index.html" id="back">X</a>
-		<div class="cardMain">
-			<div>
-				<img id="photo" class="cardImages" src="https://firebasestorage.googleapis.com/v0/b/our-stage.appspot.com/o/%EB%B0%95%EA%B0%95%ED%86%A0%EC%82%AC%EC%A7%84.PNG?alt=media&token=4de69026-8f39-4883-a6c1-88adf34e0124" alt="이미지를 누르면 연결됩니다." />
+<body>
+	<a href="index.html" id="back">X</a>
+	<div class="cardMain">
+		<div>
+			<img id="photo" class="cardImages"
+				src="https://firebasestorage.googleapis.com/v0/b/our-stage.appspot.com/o/%EB%B0%95%EA%B0%95%ED%86%A0%EC%82%AC%EC%A7%84.PNG?alt=media&token=4de69026-8f39-4883-a6c1-88adf34e0124"
+				alt="이미지를 누르면 연결됩니다." />
+		</div>
+		<div class="cardStory">
+			<h1>박강토</h1>
+			<p>정리와 브리핑을 잘 하는 편입니다.</p>
+			<a href="https://gidalim4u.tistory.com/">블로그</a>
+			<a href="https://github.com/gidalim/">GitHub</a>
+		</div>
+	</div>
+
+	<form class="comment-wrap">
+		<div class="row">
+			<div class="col">
+				<input id="name" type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
 			</div>
-			<div class="cardStory">
-				<h1>박강토</h1>
-				<p>정리와 브리핑을 잘 하는 편입니다.</p>
-				<a href="https://gidalim4u.tistory.com/">블로그</a>
-				<a href="https://github.com/gidalim/">GitHub</a>
+			<div class="col-auto">
+				<label for="inputPassword2" class="visually-hidden">Password</label>
+				<input type="password" class="form-control" id="Password" placeholder="Password" />
+			</div>
+			<div class="col">
+				<input id="comment" type="text" class="form-control" placeholder="comment" aria-label="Last name" />
+			</div>
+			<div class="col-auto">
+				<button id="makeComment" type="button" class="btn btn-primary mb-3">저장</button>
+				<button type="button" class="btn btn-primary mb-3">취소</button>
 			</div>
 		</div>
+	</form>
 
-		<form class="comment-wrap">
-			<div class="row">
-				<div class="col">
-					<input id="name" type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
-				</div>
-				<div class="col-auto">
-					<label for="inputPassword2" class="visually-hidden">Password</label>
-					<input type="password" class="form-control" id="Password" placeholder="Password" />
-				</div>
-				<div class="col">
-					<input id="comment" type="text" class="form-control" placeholder="comment" aria-label="Last name" />
-				</div>
-				<div class="col-auto">
-					<button id="makeComment" type="button" class="btn btn-primary mb-3">저장</button>
-					<button type="button" class="btn btn-primary mb-3">취소</button>
-				</div>
-			</div>
-		</form>
+	<button id="top-btn"></button>
 
-		<button id="top-btn"></button >
-
-		<div class="commentBox">
-			<div id="card" class="row row-cols-1 row-cols-md-4 g-4">
-			</div>
+	<div class="commentBox">
+		<div id="card" class="row row-cols-1 row-cols-md-4 g-4">
 		</div>
-	</body>
+	</div>
+</body>
+
 </html>
