--- a/team_stage/storyCard2.html
+++ b/team_stage/storyCard2.html
@@ -37,6 +37,7 @@
 			const app = initializeApp(firebaseConfig);
 			const db = getFirestore(app);
 
+			import { doc, setDoc, Timestamp, updateDoc, arrayUnion } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
 
 			$('#makeComment').click(async function () {
 				let title = $('#name').val();
