--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -36,8 +36,8 @@
 			// Firebase 인스턴스 초기화
 			const app = initializeApp(firebaseConfig);
 			const db = getFirestore(app);
-			// const data = firestore.collection("profile")
-			// console.log(data)
+
+			import { doc, setDoc, Timestamp, updateDoc, arrayUnion } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
 
 			$('#makeComment').click(async function () {
 				let title = $('#name').val();
