--- a/team_stage/storyCard3 copy.html
+++ b/team_stage/storyCard3 copy.html
@@ -18,12 +18,10 @@
 
 	<script type="module">
 		// Firebase SDK 라이브러리 가져오기
-		import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js';
-		import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
-		import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
-		import { getDocs } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
-	
-
+		import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
+		import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js";
+		import { getFirestore, collection, getDocs } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
+		import { addDoc } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
 
 		// Firebase 구성 정보 설정
 		const firebaseConfig = {
@@ -102,36 +100,118 @@
 
 		// 삭제기능 //
 		$(document).on('click', '#card .delete-btn', function () {
-			if ($(this).closest('.card-body').find('.password-input').length === 0) {
-				const passwordInput = $('<input>', {
-					type: 'password',
-					class: 'form-control password-input',
-					placeholder: 'Password',
-					style: 'margin-top: 10px; width: 200px; height: 30px;',
-				});
+			const deleteBtn = $(this);
+			const cardBody = deleteBtn.closest('.card-body');
+			const passwordControls = cardBody.find('.password-controls');
 
-				const deleteBtn = $(this);
-				const cardBody = deleteBtn.closest('.card-body');
-
-				cardBody.append(passwordInput);
-
-				passwordInput.on('blur', function () { });
-				passwordInput.on('keydown', function (e) {
-					if (e.key === 'Enter') {
-						const enteredPassword = $(this).val();
-						const storedPassword = cardBody.closest('.card').data('password');
-
-						if (enteredPassword === storedPassword) {
-							deleteBtn.closest('.col').remove();
-						} else {
-							alert('비밀번호가 틀립니다.');
-						}
-					}
-				});
-				passwordInput.focus();
+			if (passwordControls.length === 0) {
+				const passwordControlsHTML = `
+					<div class="password-controls">
+						<input type="password" class="form-control password-input" placeholder="Password">
+						<button type="button" class="btn btn-outline-primary double-check-btn">비밀번호 확인</button>
+					</div>`;
+				cardBody.append(passwordControlsHTML);
 			} else {
+				passwordControls.show();
 			}
 		});
+
+		$(document).on('click', '#card .password-controls .double-check-btn', function () {
+			const doubleCheckBtn = $(this);
+			const cardBody = doubleCheckBtn.closest('.card-body');
+			const enteredPassword = cardBody.find('.password-input').val();
+			const storedPassword = cardBody.closest('.card').data('password');
+
+			if (enteredPassword === String(storedPassword)) {
+				const askConfirm = confirm('정말 삭제 하시겠습니까?');
+				if (askConfirm) {
+					doubleCheckBtn.closest('.col').remove();
+				}
+			} else {
+				alert('비밀번호가 틀립니다.');
+			}
+
+			// 입력창 제거
+			cardBody.find('.password-controls').hide();
+		});
+
+
+
+
+		// 수정 기능
+		$(document).on('click', '#card .edit-btn', function () {
+			const card = $(this).closest('.card');
+			// 수정 버튼 클릭시 중복 생성 방지
+			if (card.hasClass('editing')) {
+				return;
+			}
+			const cardBody = card.find('.card-body');
+			const storedPassword = card.data('password');
+
+			const title = cardBody.find('.card-title').text();
+			const comment = cardBody.find('.card-text').text();
+
+			const editForm = `
+				<div class="edit-form">
+					<input type="password" class="form-control edit-password" placeholder="Password">
+					<button type="button" class="btn btn-outline-primary double-check-btn">비밀번호 확인</button>
+					<div class="edit-container" style="display: none;">
+						<input type="text" class="form-control edit-title" value="${title}">
+						<textarea class="form-control edit-comment">${comment}</textarea>
+						<button type="button" class="btn btn-outline-success apply-btn">적용</button>
+						<button type="button" class="btn btn-outline-secondary cancel-btn">취소</button>
+					</div>
+				</div>`;
+
+			cardBody.append(editForm);
+			card.addClass('editing');
+
+			const doubleCheckBtn = cardBody.find('.double-check-btn');
+			const editContainer = cardBody.find('.edit-container');
+			const applyBtn = cardBody.find('.apply-btn');
+			const cancelBtn = cardBody.find('.cancel-btn');
+
+			// 비밀번호 확인 버튼 클릭 시
+			doubleCheckBtn.click(function () {
+				const enteredPassword = cardBody.find('.edit-password').val();
+
+				if (enteredPassword === String(storedPassword)) {
+					editContainer.show();
+				} else {
+					alert('비밀번호가 틀립니다.');
+				}
+			});
+
+			// 적용 버튼 클릭 시
+			applyBtn.click(async function () {
+				const editedTitle = cardBody.find('.edit-title').val();
+				const editedComment = cardBody.find('.edit-comment').val();
+
+				const confirmation = confirm('수정된 내용을 적용하시겠습니까?');
+
+				if (confirmation) {
+					cardBody.find('.card-title').text(editedTitle);
+					cardBody.find('.card-text').text(editedComment);
+
+					resetEditingCard();
+				}
+			});
+
+			// 취소 버튼 클릭 시
+			cancelBtn.click(function () {
+				const confirmation = confirm('수정을 취소하시겠습니까?');
+
+				if (confirmation) {
+					resetEditingCard();
+				}
+			});
+		});
+
+		// 수정 취소 및 완료 시
+		function resetEditingCard() {
+			$('.card.editing').removeClass('editing').find('.edit-form').remove();
+		}
+
 		// Top 버튼 클릭시 페이지 상단으로 이동
 		$(document).ready(function () {
 			$('#top-btn').click(function () {
@@ -147,14 +227,14 @@
 	<div class="cardMain">
 		<div>
 			<img id="photo" class="cardImages"
-				src="https://firebasestorage.googleapis.com/v0/b/our-stage.appspot.com/o/%EB%B0%95%EA%B0%95%ED%86%A0%EC%82%AC%EC%A7%84.PNG?alt=media&token=4de69026-8f39-4883-a6c1-88adf34e0124"
+				src="https://firebasestorage.googleapis.com/v0/b/our-stage.appspot.com/o/%EC%A0%95%ED%95%B4%EC%A4%80%EC%82%AC%EC%A7%84.jpg?alt=media&token=ae8df09d-ac25-4f92-9d74-c30dd35775c3"
 				alt="이미지를 누르면 연결됩니다." />
 		</div>
 		<div class="cardStory">
-			<h1>박강토</h1>
-			<p>정리와 브리핑을 잘 하는 편입니다.</p>
-			<a href="https://gidalim4u.tistory.com/">블로그</a>
-			<a href="https://github.com/gidalim/">GitHub</a>
+			<h1>정해준</h1>
+			<p>경청을 잘 한다고 생각합니다.</p>
+			<a href="https://velog.io/@decidedcard">블로그</a>
+			<a href="https://github.com/DecidedCard">GitHub</a>
 		</div>
 	</div>
 
@@ -180,8 +260,7 @@
 	<button id="top-btn"></button>
 
 	<div class="commentBox">
-		<div id="card" class="row row-cols-1 row-cols-md-4 g-4">
-		</div>
+		<div id="card" class="row row-cols-1 row-cols-md-4 g-4"></div>
 	</div>
 </body>
 
