--- a/team_stage/storyCard2.html
+++ b/team_stage/storyCard2.html
@@ -18,10 +18,12 @@
 
 	<script type="module">
 		// Firebase SDK 라이브러리 가져오기
-		import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
-		import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
-		import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
-		import { getDocs } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+		import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js';
+		import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
+		import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
+		import { getDocs, deleteDoc } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
+
+
 
 		// Firebase 구성 정보 설정
 		const firebaseConfig = {
@@ -41,32 +43,56 @@
 
 		import { doc, setDoc, Timestamp, updateDoc, arrayUnion } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js';
 
+
+		async function renderComments() {
+			const querySnapshot = await getDocs(collection(db, "storyCard2"));
+			$('#card').empty();
+
+			querySnapshot.forEach(doc => {
+				const comment = doc.data();
+				let temp_html = `
+        <div class="col">
+            <div id=${doc.id} class="card border-info mb-3" style="max-width: 100rem" data-password="${comment.Password}">
+                <div class="card-body">
+                    <h5 class="card-title">${comment.name}</h5>
+                    <p class="card-text">${comment.comment}</p>
+                    <button type="button" class="btn btn-outline-warning edit-btn">수정</button>
+                    <button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
+                </div>
+            </div>
+        </div>`;
+
+				$('#card').append(temp_html);
+			});
+		}
+
+		window.onload = async function () {
+
+			await renderComments()
+		};
 		$('#makeComment').click(async function () {
-			let title = $('#name').val();
+
+			let name = $('#name').val();
 			let Password = $('#Password').val();
 			let comment = $('#comment').val();
 
+			let doc = {
+				'name': name,
+				'Password': Password,
+				'comment': comment
+			}
 
-			let temp_html = `
-				<div class="col">
-					<div class="card border-info mb-3" style="max-width: 100rem" data-password="${Password}">
-						<div class="card-body">
-							<h5 class="card-title">${title}</h5>
-							<p class="card-text">${comment}</p>
-							<button type="button" class="btn btn-outline-warning edit-btn">수정</button>
-							<button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
-						</div>
-					</div>
-				</div>`;
-			$('#card').append(temp_html);
+			const docRef = await addDoc(collection(db, "storyCard2"), doc);
 
-			// await addDoc(collection(db, "Profile"), doc);
-			//     alert('저장 완료!');
-			//     window.location.reload();
+			alert('저장 완료!');
+			window.location.reload();
 		});
 
+
 		// 삭제기능 //
+
 		$(document).on('click', '#card .delete-btn', function () {
+
 			const deleteBtn = $(this);
 			const cardBody = deleteBtn.closest('.card-body');
 			const passwordControls = cardBody.find('.password-controls');
@@ -75,16 +101,20 @@
 				const passwordControlsHTML = `
 					<div class="password-controls">
 						<input type="password" class="form-control password-input" placeholder="Password">
-						<button type="button" class="btn btn-outline-primary double-check-btn">비밀번호 확인</button>
+						<button type="button" class="btn btn-outline-primary double-check-btn" >비밀번호 확인</button>
 					</div>`;
 				cardBody.append(passwordControlsHTML);
+
+
 			} else {
 				passwordControls.show();
 			}
 		});
 
-		$(document).on('click', '#card .password-controls .double-check-btn', function () {
+
+		$(document).on('click', '#card .password-controls .double-check-btn', async function () {
 			const doubleCheckBtn = $(this);
+			const docId = doubleCheckBtn.closest('.card')[0].id
 			const cardBody = doubleCheckBtn.closest('.card-body');
 			const enteredPassword = cardBody.find('.password-input').val();
 			const storedPassword = cardBody.closest('.card').data('password');
@@ -92,6 +122,10 @@
 			if (enteredPassword === String(storedPassword)) {
 				const askConfirm = confirm('정말 삭제 하시겠습니까?');
 				if (askConfirm) {
+
+					await deleteDoc(doc(db, 'storyCard2', docId));
+
+
 					doubleCheckBtn.closest('.col').remove();
 				}
 			} else {
@@ -108,6 +142,7 @@
 		// 수정 기능
 		$(document).on('click', '#card .edit-btn', function () {
 			const card = $(this).closest('.card');
+			const docId = card[0].id
 			// 수정 버튼 클릭시 중복 생성 방지
 			if (card.hasClass('editing')) {
 				return;
@@ -115,7 +150,7 @@
 			const cardBody = card.find('.card-body');
 			const storedPassword = card.data('password');
 
-			const title = cardBody.find('.card-title').text();
+			const name = cardBody.find('.card-title').text();
 			const comment = cardBody.find('.card-text').text();
 
 			const editForm = `
@@ -123,7 +158,7 @@
 					<input type="password" class="form-control edit-password" placeholder="Password">
 					<button type="button" class="btn btn-outline-primary double-check-btn">비밀번호 확인</button>
 					<div class="edit-container" style="display: none;">
-						<input type="text" class="form-control edit-title" value="${title}">
+						<input type="text" class="form-control edit-title" value="${name}">
 						<textarea class="form-control edit-comment">${comment}</textarea>
 						<button type="button" class="btn btn-outline-success apply-btn">적용</button>
 						<button type="button" class="btn btn-outline-secondary cancel-btn">취소</button>
@@ -160,8 +195,14 @@
 					cardBody.find('.card-title').text(editedTitle);
 					cardBody.find('.card-text').text(editedComment);
 
+					const modifycomment = doc(db, "storyCard2", docId);
+					
+					await updateDoc(modifycomment, {
+						name: editedTitle,
+            comment: editedComment
+					});
 					resetEditingCard();
-				}
+					}
 			});
 
 			// 취소 버튼 클릭 시
