--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -114,18 +114,20 @@
           </details>
           <br>
           <details>
-            <summary>우리 팀만의 목표</summary>
-            <p>힘을 합쳐 완성하기!</p>
+            <summary>우리 팀을 소개합니다</summary>
+            <p>비전공자 다섯 명이 모여 만들어낸 무대 Stage입니다.</p>
+            <p></p>
           </details>
           <br>
           <details>
-            <summary>이미지 링크</summary>
-            <p>링크</p>
+            <summary>우리 팀의 목표</summary>
+            <p>실패와 성공 그 모두가 다 우리의 것입니다.</p>
           </details>
           <br>
           <details>
             <summary>우리팀 약속!</summary>
             <p>캠켜기, 마이크를 이용 할 떈 부담없이 사용하기</p>
+            <p>git push를 할 땐 서로 알려주기</p>
           </details>
         </span>
       </div>
